cmake_minimum_required(VERSION 3.13)
if (APPLE)
    project(dusk LANGUAGES C CXX OBJC)
else ()
    project(dusk LANGUAGES C CXX)
endif ()

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 20)

if (CMAKE_SYSTEM_NAME STREQUAL Linux)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unknown-pragmas -Wno-unused-variable -Wno-unused-parameter -fPIC")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-register -fPIC")
    set(CMAKE_PREFIX_PATH /usr)
    set(CMAKE_LIBRARY_ARCHITECTURE x86_64-linux-gnu)
    set(CMAKE_LIBRARY_PATH "/usr/lib64" "/usr/lib/x86_64-linux-gnu" CACHE PATH "")
    set(CMAKE_FIND_LIBRARY_CUSTOM_LIB_SUFFIX 64)
    set(CMAKE_INSTALL_RPATH "$ORIGIN")
    set(CMAKE_BUILD_RPATH "$ORIGIN")
elseif (APPLE)
    add_compile_options(-Wno-declaration-after-statement)
    set(CMAKE_INSTALL_RPATH "$ORIGIN")
    set(CMAKE_BUILD_RPATH "$ORIGIN")
elseif (MSVC)
    add_compile_options(/bigobj)
endif ()

add_subdirectory(extern/aurora EXCLUDE_FROM_ALL)

set(DOLZEL_FILES
    src/m_Do/m_Do_main.cpp
    src/m_Do/m_Do_printf.cpp
    src/m_Do/m_Do_audio.cpp
    src/m_Do/m_Do_controller_pad.cpp
    src/m_Do/m_Re_controller_pad.cpp
    src/m_Do/m_Do_graphic.cpp
    src/m_Do/m_Do_machine.cpp
    src/m_Do/m_Do_mtx.cpp
    src/m_Do/m_Do_ext.cpp
    src/m_Do/m_Do_lib.cpp
    src/m_Do/m_Do_Reset.cpp
    src/m_Do/m_Do_dvd_thread.cpp
    src/m_Do/m_Do_DVDError.cpp
    src/m_Do/m_Do_MemCard.cpp
    src/m_Do/m_Do_MemCardRWmng.cpp
    src/m_Do/m_Do_machine_exception.cpp
    src/m_Do/m_Do_hostIO.cpp
    src/c/c_damagereaction.cpp
    src/c/c_dylink.cpp
    src/f_ap/f_ap_game.cpp
    src/f_op/f_op_actor.cpp
    src/f_op/f_op_actor_iter.cpp
    src/f_op/f_op_actor_tag.cpp
    src/f_op/f_op_camera.cpp
    src/f_op/f_op_actor_mng.cpp
    src/f_op/f_op_camera_mng.cpp
    src/f_op/f_op_overlap.cpp
    src/f_op/f_op_overlap_mng.cpp
    src/f_op/f_op_overlap_req.cpp
    src/f_op/f_op_scene.cpp
    src/f_op/f_op_scene_iter.cpp
    src/f_op/f_op_scene_mng.cpp
    src/f_op/f_op_scene_req.cpp
    src/f_op/f_op_scene_tag.cpp
    src/f_op/f_op_view.cpp
    src/f_op/f_op_kankyo.cpp
    src/f_op/f_op_msg.cpp
    src/f_op/f_op_kankyo_mng.cpp
    src/f_op/f_op_msg_mng.cpp
    src/f_op/f_op_draw_iter.cpp
    src/f_op/f_op_draw_tag.cpp
    src/f_op/f_op_scene_pause.cpp
    src/f_pc/f_pc_base.cpp
    src/f_pc/f_pc_create_iter.cpp
    src/f_pc/f_pc_create_req.cpp
    src/f_pc/f_pc_create_tag.cpp
    src/f_pc/f_pc_creator.cpp
    src/f_pc/f_pc_delete_tag.cpp
    src/f_pc/f_pc_deletor.cpp
    src/f_pc/f_pc_draw_priority.cpp
    src/f_pc/f_pc_executor.cpp
    src/f_pc/f_pc_layer.cpp
    src/f_pc/f_pc_leaf.cpp
    src/f_pc/f_pc_layer_iter.cpp
    src/f_pc/f_pc_layer_tag.cpp
    src/f_pc/f_pc_line.cpp
    src/f_pc/f_pc_load.cpp
    src/f_pc/f_pc_manager.cpp
    src/f_pc/f_pc_method.cpp
    src/f_pc/f_pc_node.cpp
    src/f_pc/f_pc_node_req.cpp
    src/f_pc/f_pc_priority.cpp
    src/f_pc/f_pc_profile.cpp
    src/f_pc/f_pc_searcher.cpp
    src/f_pc/f_pc_line_tag.cpp
    src/f_pc/f_pc_line_iter.cpp
    src/f_pc/f_pc_method_iter.cpp
    src/f_pc/f_pc_method_tag.cpp
    src/f_pc/f_pc_pause.cpp
    src/f_pc/f_pc_draw.cpp
    src/f_pc/f_pc_fstcreate_req.cpp
    src/f_pc/f_pc_stdcreate_req.cpp
    src/f_pc/f_pc_debug_sv.cpp
    src/d/d_stage.cpp
    src/d/d_map.cpp
    src/d/d_com_inf_game.cpp
    src/d/d_com_static.cpp
    src/d/d_com_inf_actor.cpp
    src/d/d_bomb.cpp
    src/d/d_lib.cpp
    src/d/d_save.cpp
    src/d/d_save_init.cpp
    src/d/d_jnt_col.cpp
    src/d/d_a_obj.cpp
    src/d/d_a_itembase_static.cpp
    src/d/d_a_item_static.cpp
    src/d/d_a_shop_item_static.cpp
    src/d/d_a_horse_static.cpp
    src/d/d_demo.cpp
    src/d/d_door_param2.cpp
    src/d/d_resorce.cpp
    src/d/d_map_path.cpp
    src/d/d_map_path_fmap.cpp
    src/d/d_map_path_dmap.cpp
    src/d/d_event.cpp
    src/d/d_event_data.cpp
    src/d/d_event_manager.cpp
    src/d/d_event_lib.cpp
    src/d/d_event_debug.cpp
    src/d/d_simple_model.cpp
    src/d/d_particle.cpp
    src/d/d_particle_name.cpp
    src/d/d_particle_copoly.cpp
    src/d/d_path.cpp
    src/d/d_drawlist.cpp
    src/d/d_kankyo_data.cpp
    src/d/d_kankyo_wether.cpp
    src/d/d_kankyo_rain.cpp
    src/d/d_kankyo_debug.cpp
    src/d/d_vibration.cpp
    src/d/d_vib_pattern.cpp
    src/d/d_attention.cpp
    src/d/d_bg_parts.cpp
    src/d/d_bg_pc.cpp
    src/d/d_att_dist.cpp
    src/d/d_bg_plc.cpp
    src/d/d_bg_s.cpp
    src/d/d_bg_s_acch.cpp
    src/d/d_bg_s_chk.cpp
    src/d/d_bg_s_gnd_chk.cpp
    src/d/d_bg_s_grp_pass_chk.cpp
    src/d/d_bg_s_lin_chk.cpp
    src/d/d_bg_s_movebg_actor.cpp
    src/d/d_bg_s_sph_chk.cpp
    src/d/d_bg_s_spl_grp_chk.cpp
    src/d/d_bg_s_poly_pass_chk.cpp
    src/d/d_bg_s_roof_chk.cpp
    src/d/d_bg_s_wtr_chk.cpp
    src/d/d_bg_w.cpp
    src/d/d_bg_w_base.cpp
    src/d/d_bg_w_kcol.cpp
    src/d/d_bg_w_sv.cpp
    src/d/d_cc_d.cpp
    src/d/d_cc_mass_s.cpp
    src/d/d_cc_s.cpp
    src/d/d_cc_uty.cpp
    src/d/d_cam_param.cpp
    src/d/d_ev_camera.cpp
    src/d/d_spline_path.cpp
    src/d/d_item_data.cpp
    src/d/d_item.cpp
    src/d/d_tresure.cpp
    src/d/d_model.cpp
    src/d/d_eye_hl.cpp
    src/d/d_error_msg.cpp
    src/d/d_debug_viewer.cpp
    src/d/d_debug_camera.cpp
    src/d/actor/d_a_alink.cpp
    src/d/actor/d_a_itembase.cpp
    src/d/actor/d_a_no_chg_room.cpp
    src/d/actor/d_a_npc.cpp
    src/d/actor/d_a_npc_cd.cpp
    src/d/actor/d_a_npc_cd2.cpp
    src/d/actor/d_a_obj_item.cpp
    src/d/d_insect.cpp
    src/d/actor/d_a_obj_ss_base.cpp
    src/d/actor/d_a_player.cpp
    src/d/d_camera.cpp
    src/d/d_envse.cpp
    src/d/d_file_select.cpp
    src/d/d_file_sel_warning.cpp
    src/d/d_file_sel_info.cpp
    src/d/d_bright_check.cpp
    src/d/d_scope.cpp
    src/d/d_select_cursor.cpp
    src/d/d_select_icon.cpp
    src/d/d_shop_camera.cpp
    src/d/d_shop_item_ctrl.cpp
    src/d/d_shop_system.cpp
    src/d/d_gameover.cpp
    src/d/d_kankyo.cpp
    src/d/d_kyeff.cpp
    src/d/d_kyeff2.cpp
    src/d/d_ky_thunder.cpp
    src/d/d_kantera_icon_meter.cpp
    src/d/d_menu_calibration.cpp
    src/d/d_menu_collect.cpp
    src/d/d_menu_dmap.cpp
    src/d/d_menu_dmap_map.cpp
    src/d/d_menu_map_common.cpp
    src/d/d_menu_fishing.cpp
    src/d/d_menu_fmap.cpp
    src/d/d_menu_fmap_map.cpp
    src/d/d_menu_fmap2D.cpp
    src/d/d_menu_insect.cpp
    src/d/d_menu_item_explain.cpp
    src/d/d_menu_letter.cpp
    src/d/d_menu_option.cpp
    src/d/d_menu_ring.cpp
    src/d/d_menu_save.cpp
    src/d/d_menu_skill.cpp
    src/d/d_menu_window_HIO.cpp
    src/d/d_menu_window.cpp
    src/d/d_meter_HIO.cpp
    src/d/d_meter_button.cpp
    src/d/d_meter_haihai.cpp
    src/d/d_meter_hakusha.cpp
    src/d/d_meter_map.cpp
    src/d/d_meter_string.cpp
    src/d/d_meter2_draw.cpp
    src/d/d_meter2_info.cpp
    src/d/d_meter2.cpp
    src/d/d_msg_out_font.cpp
    src/d/d_msg_class.cpp
    src/d/d_msg_object.cpp
    src/d/d_msg_unit.cpp
    src/d/d_msg_scrn_3select.cpp
    src/d/d_msg_scrn_arrow.cpp
    src/d/d_msg_scrn_base.cpp
    src/d/d_msg_scrn_boss.cpp
    src/d/d_msg_scrn_explain.cpp
    src/d/d_msg_scrn_item.cpp
    src/d/d_msg_scrn_howl.cpp
    src/d/d_msg_scrn_jimaku.cpp
    src/d/d_msg_scrn_kanban.cpp
    src/d/d_msg_scrn_light.cpp
    src/d/d_msg_scrn_place.cpp
    src/d/d_msg_scrn_staff.cpp
    src/d/d_msg_scrn_talk.cpp
    src/d/d_msg_scrn_tree.cpp
    src/d/d_msg_string_base.cpp
    src/d/d_msg_string.cpp
    src/d/d_msg_flow.cpp
    src/d/d_name.cpp
    src/d/d_npc_lib.cpp
    src/d/d_ovlp_fade.cpp
    src/d/d_ovlp_fade2.cpp
    src/d/d_ovlp_fade3.cpp
    src/d/d_pane_class.cpp
    src/d/d_pane_class_alpha.cpp
    src/d/d_pane_class_ex.cpp
    src/d/d_s_logo.cpp
    src/d/d_s_menu.cpp
    src/d/d_s_name.cpp
    src/d/d_s_play.cpp
    src/d/d_s_room.cpp
    src/d/d_s_title.cpp
    src/d/d_save_HIO.cpp
    src/d/d_timer.cpp
    src/d/d_k_wmark.cpp
    src/d/d_k_wpillar.cpp
    src/DynamicLink.cpp
    src/CaptureScreen.cpp
    )

set(Z2AUDIOLIB_FILES
    src/Z2AudioLib/Z2Calc.cpp
    src/Z2AudioLib/Z2AudioArcLoader.cpp
    src/Z2AudioLib/Z2Param.cpp
    src/Z2AudioLib/Z2SoundMgr.cpp
    src/Z2AudioLib/Z2SoundStarter.cpp
    src/Z2AudioLib/Z2SoundHandles.cpp
    src/Z2AudioLib/Z2SeMgr.cpp
    src/Z2AudioLib/Z2SeqMgr.cpp
    src/Z2AudioLib/Z2StatusMgr.cpp
    src/Z2AudioLib/Z2SceneMgr.cpp
    src/Z2AudioLib/Z2FxLineMgr.cpp
    src/Z2AudioLib/Z2SoundInfo.cpp
    src/Z2AudioLib/Z2Audience.cpp
    src/Z2AudioLib/Z2SoundObject.cpp
    src/Z2AudioLib/Z2SoundObjMgr.cpp
    src/Z2AudioLib/Z2Creature.cpp
    src/Z2AudioLib/Z2LinkMgr.cpp
    src/Z2AudioLib/Z2EnvSeMgr.cpp
    src/Z2AudioLib/Z2WolfHowlMgr.cpp
    src/Z2AudioLib/Z2SpeechMgr2.cpp
    src/Z2AudioLib/Z2AudioMgr.cpp
    )

set(SSYSTEM_FILES
    src/SSystem/SComponent/c_malloc.cpp
    src/SSystem/SComponent/c_API.cpp
    src/SSystem/SComponent/c_API_controller_pad.cpp
    src/SSystem/SComponent/c_API_graphic.cpp
    src/SSystem/SComponent/c_cc_d.cpp
    src/SSystem/SComponent/c_cc_s.cpp
    src/SSystem/SComponent/c_counter.cpp
    src/SSystem/SComponent/c_list.cpp
    src/SSystem/SComponent/c_list_iter.cpp
    src/SSystem/SComponent/c_node.cpp
    src/SSystem/SComponent/c_node_iter.cpp
    src/SSystem/SComponent/c_tree.cpp
    src/SSystem/SComponent/c_tree_iter.cpp
    src/SSystem/SComponent/c_phase.cpp
    src/SSystem/SComponent/c_request.cpp
    src/SSystem/SComponent/c_tag.cpp
    src/SSystem/SComponent/c_tag_iter.cpp
    src/SSystem/SComponent/c_xyz.cpp
    src/SSystem/SComponent/c_sxyz.cpp
    src/SSystem/SComponent/c_math.cpp
    src/SSystem/SComponent/c_bg_s_chk.cpp
    src/SSystem/SComponent/c_bg_s_gnd_chk.cpp
    src/SSystem/SComponent/c_bg_s_lin_chk.cpp
    src/SSystem/SComponent/c_bg_s_shdw_draw.cpp
    src/SSystem/SComponent/c_bg_s_poly_info.cpp
    src/SSystem/SComponent/c_bg_w.cpp
    src/SSystem/SComponent/c_m2d.cpp
    src/SSystem/SComponent/c_m3d.cpp
    src/SSystem/SComponent/c_m3d_g_aab.cpp
    src/SSystem/SComponent/c_m3d_g_cir.cpp
    src/SSystem/SComponent/c_m3d_g_cps.cpp
    src/SSystem/SComponent/c_m3d_g_cyl.cpp
    src/SSystem/SComponent/c_m3d_g_lin.cpp
    src/SSystem/SComponent/c_m3d_g_pla.cpp
    src/SSystem/SComponent/c_m3d_g_sph.cpp
    src/SSystem/SComponent/c_m3d_g_tri.cpp
    src/SSystem/SComponent/c_m3d_g_vtx.cpp
    src/SSystem/SComponent/c_lib.cpp
    src/SSystem/SComponent/c_angle.cpp
    src/SSystem/SStandard/s_basic.cpp
    )

set(JSYSTEM_FILES
    src/JSystem/JFramework/JFWSystem.cpp
    src/JSystem/JFramework/JFWDisplay.cpp
    src/JSystem/J3DU/J3DUClipper.cpp
    src/JSystem/J3DU/J3DUDL.cpp
    src/JSystem/JParticle/JPAResourceManager.cpp
    src/JSystem/JParticle/JPAResource.cpp
    src/JSystem/JParticle/JPABaseShape.cpp
    src/JSystem/JParticle/JPAExtraShape.cpp
    src/JSystem/JParticle/JPAChildShape.cpp
    src/JSystem/JParticle/JPAExTexShape.cpp
    src/JSystem/JParticle/JPADynamicsBlock.cpp
    src/JSystem/JParticle/JPAFieldBlock.cpp
    src/JSystem/JParticle/JPAKeyBlock.cpp
    src/JSystem/JParticle/JPATexture.cpp
    src/JSystem/JParticle/JPAResourceLoader.cpp
    src/JSystem/JParticle/JPAEmitterManager.cpp
    src/JSystem/JParticle/JPAEmitter.cpp
    src/JSystem/JParticle/JPAParticle.cpp
    src/JSystem/JParticle/JPAMath.cpp
    src/JSystem/JStage/JSGActor.cpp
    src/JSystem/JStage/JSGAmbientLight.cpp
    src/JSystem/JStage/JSGCamera.cpp
    src/JSystem/JStage/JSGFog.cpp
    src/JSystem/JStage/JSGLight.cpp
    src/JSystem/JStage/JSGObject.cpp
    src/JSystem/JStage/JSGSystem.cpp
    src/JSystem/JStudio/JStudio/ctb.cpp
    src/JSystem/JStudio/JStudio/ctb-data.cpp
    src/JSystem/JStudio/JStudio/functionvalue.cpp
    src/JSystem/JStudio/JStudio/fvb.cpp
    src/JSystem/JStudio/JStudio/fvb-data.cpp
    src/JSystem/JStudio/JStudio/fvb-data-parse.cpp
    src/JSystem/JStudio/JStudio/jstudio-control.cpp
    src/JSystem/JStudio/JStudio/jstudio-data.cpp
    src/JSystem/JStudio/JStudio/jstudio-math.cpp
    src/JSystem/JStudio/JStudio/jstudio-object.cpp
    src/JSystem/JStudio/JStudio/object-id.cpp
    src/JSystem/JStudio/JStudio/stb.cpp
    src/JSystem/JStudio/JStudio/stb-data-parse.cpp
    src/JSystem/JStudio/JStudio/stb-data.cpp
    src/JSystem/JStudio/JStudio_JStage/control.cpp
    src/JSystem/JStudio/JStudio_JStage/object.cpp
    src/JSystem/JStudio/JStudio_JStage/object-actor.cpp
    src/JSystem/JStudio/JStudio_JStage/object-ambientlight.cpp
    src/JSystem/JStudio/JStudio_JStage/object-camera.cpp
    src/JSystem/JStudio/JStudio_JStage/object-fog.cpp
    src/JSystem/JStudio/JStudio_JStage/object-light.cpp
    src/JSystem/JStudio/JStudio_JAudio2/control.cpp
    src/JSystem/JStudio/JStudio_JAudio2/object-sound.cpp
    src/JSystem/JStudio/JStudio_JParticle/control.cpp
    src/JSystem/JStudio/JStudio_JParticle/object-particle.cpp
    src/JSystem/JAudio2/JASCalc.cpp
    src/JSystem/JAudio2/JASTaskThread.cpp
    src/JSystem/JAudio2/JASDvdThread.cpp
    src/JSystem/JAudio2/JASCallback.cpp
    src/JSystem/JAudio2/JASHeapCtrl.cpp
    src/JSystem/JAudio2/JASResArcLoader.cpp
    src/JSystem/JAudio2/JASProbe.cpp
    src/JSystem/JAudio2/JASReport.cpp
    src/JSystem/JAudio2/JASCmdStack.cpp
    src/JSystem/JAudio2/JASTrack.cpp
    src/JSystem/JAudio2/JASTrackPort.cpp
    src/JSystem/JAudio2/JASRegisterParam.cpp
    src/JSystem/JAudio2/JASSeqCtrl.cpp
    src/JSystem/JAudio2/JASSeqParser.cpp
    src/JSystem/JAudio2/JASSeqReader.cpp
    src/JSystem/JAudio2/JASAramStream.cpp
    src/JSystem/JAudio2/JASBank.cpp
    src/JSystem/JAudio2/JASBasicBank.cpp
    src/JSystem/JAudio2/JASVoiceBank.cpp
    src/JSystem/JAudio2/JASBasicInst.cpp
    src/JSystem/JAudio2/JASDrumSet.cpp
    src/JSystem/JAudio2/JASBasicWaveBank.cpp
    src/JSystem/JAudio2/JASSimpleWaveBank.cpp
    src/JSystem/JAudio2/JASWSParser.cpp
    src/JSystem/JAudio2/JASBNKParser.cpp
    src/JSystem/JAudio2/JASWaveArcLoader.cpp
    src/JSystem/JAudio2/JASChannel.cpp
    src/JSystem/JAudio2/JASLfo.cpp
    src/JSystem/JAudio2/JASOscillator.cpp
    src/JSystem/JAudio2/JASAiCtrl.cpp
    src/JSystem/JAudio2/JASAudioThread.cpp
    src/JSystem/JAudio2/JASAudioReseter.cpp
    src/JSystem/JAudio2/JASDSPChannel.cpp
    src/JSystem/JAudio2/JASDSPInterface.cpp
    src/JSystem/JAudio2/JASDriverIF.cpp
    src/JSystem/JAudio2/JASSoundParams.cpp
    src/JSystem/JAudio2/dspproc.cpp
    src/JSystem/JAudio2/dsptask.cpp
    src/JSystem/JAudio2/osdsp.cpp
    src/JSystem/JAudio2/osdsp_task.cpp
    src/JSystem/JAudio2/JAIAudible.cpp
    src/JSystem/JAudio2/JAIAudience.cpp
    src/JSystem/JAudio2/JAISe.cpp
    src/JSystem/JAudio2/JAISeMgr.cpp
    src/JSystem/JAudio2/JAISeq.cpp
    src/JSystem/JAudio2/JAISeqDataMgr.cpp
    src/JSystem/JAudio2/JAISeqMgr.cpp
    src/JSystem/JAudio2/JAISound.cpp
    src/JSystem/JAudio2/JAISoundChild.cpp
    src/JSystem/JAudio2/JAISoundHandles.cpp
    src/JSystem/JAudio2/JAISoundInfo.cpp
    src/JSystem/JAudio2/JAISoundParams.cpp
    src/JSystem/JAudio2/JAISoundStarter.cpp
    src/JSystem/JAudio2/JAIStream.cpp
    src/JSystem/JAudio2/JAIStreamDataMgr.cpp
    src/JSystem/JAudio2/JAIStreamMgr.cpp
    src/JSystem/JAudio2/JAUAudioArcInterpreter.cpp
    src/JSystem/JAudio2/JAUAudioArcLoader.cpp
    src/JSystem/JAudio2/JAUAudioMgr.cpp
    src/JSystem/JAudio2/JAUBankTable.cpp
    src/JSystem/JAudio2/JAUClusterSound.cpp
    src/JSystem/JAudio2/JAUInitializer.cpp
    src/JSystem/JAudio2/JAUSectionHeap.cpp
    src/JSystem/JAudio2/JAUSeqCollection.cpp
    src/JSystem/JAudio2/JAUSeqDataBlockMgr.cpp
    src/JSystem/JAudio2/JAUSoundAnimator.cpp
    src/JSystem/JAudio2/JAUSoundTable.cpp
    src/JSystem/JAudio2/JAUStreamFileTable.cpp
    src/JSystem/JMessage/control.cpp
    src/JSystem/JMessage/data.cpp
    src/JSystem/JMessage/processor.cpp
    src/JSystem/JMessage/resource.cpp
    src/JSystem/JMessage/locale.cpp
    src/JSystem/JKernel/JKRHeap.cpp
    src/JSystem/JKernel/JKRExpHeap.cpp
    src/JSystem/JKernel/JKRSolidHeap.cpp
    src/JSystem/JKernel/JKRAssertHeap.cpp
    src/JSystem/JKernel/JKRDisposer.cpp
    src/JSystem/JKernel/JKRThread.cpp
    src/JSystem/JKernel/JKRAram.cpp
    src/JSystem/JKernel/JKRAramHeap.cpp
    src/JSystem/JKernel/JKRAramBlock.cpp
    src/JSystem/JKernel/JKRAramPiece.cpp
    src/JSystem/JKernel/JKRAramStream.cpp
    src/JSystem/JKernel/JKRFileLoader.cpp
    src/JSystem/JKernel/JKRFileFinder.cpp
    src/JSystem/JKernel/JKRFileCache.cpp
    src/JSystem/JKernel/JKRArchivePub.cpp
    src/JSystem/JKernel/JKRArchivePri.cpp
    src/JSystem/JKernel/JKRMemArchive.cpp
    src/JSystem/JKernel/JKRAramArchive.cpp
    src/JSystem/JKernel/JKRDvdArchive.cpp
    src/JSystem/JKernel/JKRCompArchive.cpp
    src/JSystem/JKernel/JKRFile.cpp
    src/JSystem/JKernel/JKRDvdFile.cpp
    src/JSystem/JKernel/JKRDvdRipper.cpp
    src/JSystem/JKernel/JKRDvdAramRipper.cpp
    src/JSystem/JKernel/JKRDecomp.cpp
    src/JSystem/JSupport/JSUList.cpp
    src/JSystem/JSupport/JSUInputStream.cpp
    src/JSystem/JSupport/JSUOutputStream.cpp
    src/JSystem/JSupport/JSUMemoryStream.cpp
    src/JSystem/JSupport/JSUFileStream.cpp
    src/JSystem/JGadget/binary.cpp
    src/JSystem/JGadget/linklist.cpp
    src/JSystem/JGadget/std-vector.cpp
    src/JSystem/JUtility/JUTCacheFont.cpp
    src/JSystem/JUtility/JUTResource.cpp
    src/JSystem/JUtility/JUTTexture.cpp
    src/JSystem/JUtility/JUTPalette.cpp
    src/JSystem/JUtility/JUTNameTab.cpp
    src/JSystem/JUtility/JUTGraphFifo.cpp
    src/JSystem/JUtility/JUTFont.cpp
    src/JSystem/JUtility/JUTResFont.cpp
    src/JSystem/JUtility/JUTDbPrint.cpp
    src/JSystem/JUtility/JUTGamePad.cpp
    src/JSystem/JUtility/JUTException.cpp
    src/JSystem/JUtility/JUTDirectPrint.cpp
    src/JSystem/JUtility/JUTAssert.cpp
    src/JSystem/JUtility/JUTVideo.cpp
    src/JSystem/JUtility/JUTXfb.cpp
    src/JSystem/JUtility/JUTFader.cpp
    src/JSystem/JUtility/JUTProcBar.cpp
    src/JSystem/JUtility/JUTConsole.cpp
    src/JSystem/JUtility/JUTDirectFile.cpp
    src/JSystem/JUtility/JUTFontData_Ascfont_fix12.cpp
    src/JSystem/J2DGraph/J2DGrafContext.cpp
    src/JSystem/J2DGraph/J2DOrthoGraph.cpp
    src/JSystem/J2DGraph/J2DTevs.cpp
    src/JSystem/J2DGraph/J2DMaterial.cpp
    src/JSystem/J2DGraph/J2DMatBlock.cpp
    src/JSystem/J2DGraph/J2DMaterialFactory.cpp
    src/JSystem/J2DGraph/J2DPrint.cpp
    src/JSystem/J2DGraph/J2DPane.cpp
    src/JSystem/J2DGraph/J2DScreen.cpp
    src/JSystem/J2DGraph/J2DWindow.cpp
    src/JSystem/J2DGraph/J2DPicture.cpp
    src/JSystem/J2DGraph/J2DTextBox.cpp
    src/JSystem/J2DGraph/J2DWindowEx.cpp
    src/JSystem/J2DGraph/J2DPictureEx.cpp
    src/JSystem/J2DGraph/J2DTextBoxEx.cpp
    src/JSystem/J2DGraph/J2DAnmLoader.cpp
    src/JSystem/J2DGraph/J2DAnimation.cpp
    src/JSystem/J2DGraph/J2DManage.cpp
    src/JSystem/J3DGraphBase/J3DGD.cpp
    src/JSystem/J3DGraphBase/J3DSys.cpp
    src/JSystem/J3DGraphBase/J3DVertex.cpp
    src/JSystem/J3DGraphBase/J3DTransform.cpp
    src/JSystem/J3DGraphBase/J3DTexture.cpp
    src/JSystem/J3DGraphBase/J3DPacket.cpp
    src/JSystem/J3DGraphBase/J3DShapeMtx.cpp
    src/JSystem/J3DGraphBase/J3DShapeDraw.cpp
    src/JSystem/J3DGraphBase/J3DShape.cpp
    src/JSystem/J3DGraphBase/J3DMaterial.cpp
    src/JSystem/J3DGraphBase/J3DMatBlock.cpp
    src/JSystem/J3DGraphBase/J3DTevs.cpp
    src/JSystem/J3DGraphBase/J3DDrawBuffer.cpp
    src/JSystem/J3DGraphBase/J3DStruct.cpp
    src/JSystem/J3DGraphAnimator/J3DShapeTable.cpp
    src/JSystem/J3DGraphAnimator/J3DJointTree.cpp
    src/JSystem/J3DGraphAnimator/J3DModelData.cpp
    src/JSystem/J3DGraphAnimator/J3DMtxBuffer.cpp
    src/JSystem/J3DGraphAnimator/J3DModel.cpp
    src/JSystem/J3DGraphAnimator/J3DAnimation.cpp
    src/JSystem/J3DGraphAnimator/J3DMaterialAnm.cpp
    src/JSystem/J3DGraphAnimator/J3DSkinDeform.cpp
    src/JSystem/J3DGraphAnimator/J3DCluster.cpp
    src/JSystem/J3DGraphAnimator/J3DJoint.cpp
    src/JSystem/J3DGraphAnimator/J3DMaterialAttach.cpp
    src/JSystem/J3DGraphLoader/J3DMaterialFactory.cpp
    src/JSystem/J3DGraphLoader/J3DMaterialFactory_v21.cpp
    src/JSystem/J3DGraphLoader/J3DClusterLoader.cpp
    src/JSystem/J3DGraphLoader/J3DModelLoader.cpp
    src/JSystem/J3DGraphLoader/J3DModelLoaderCalcSize.cpp
    src/JSystem/J3DGraphLoader/J3DJointFactory.cpp
    src/JSystem/J3DGraphLoader/J3DShapeFactory.cpp
    src/JSystem/J3DGraphLoader/J3DAnmLoader.cpp
    src/JSystem/JMath/JMath.cpp
    src/JSystem/JMath/random.cpp
    src/JSystem/JMath/JMATrigonometric.cpp
    )

set(REL_FILES
    src/f_pc/f_pc_profile_lst.cpp
    src/d/actor/d_a_andsw.cpp
    src/d/actor/d_a_bg.cpp
    src/d/actor/d_a_bg_obj.cpp
    src/d/actor/d_a_dmidna.cpp
    src/d/actor/d_a_door_dbdoor00.cpp
    src/d/actor/d_a_door_knob00.cpp
    src/d/actor/d_a_door_shutter.cpp
    src/d/actor/d_a_door_spiral.cpp
    src/d/actor/d_a_dshutter.cpp
    src/d/actor/d_a_ep.cpp
    src/d/actor/d_a_hitobj.cpp
    src/d/actor/d_a_kytag00.cpp
    src/d/actor/d_a_kytag04.cpp
    src/d/actor/d_a_kytag17.cpp
    src/d/actor/d_a_obj_brakeeff.cpp
    src/d/actor/d_a_obj_burnbox.cpp
    src/d/actor/d_a_obj_carry.cpp
    src/d/actor/d_a_obj_ito.cpp
    src/d/actor/d_a_obj_movebox.cpp
    src/d/actor/d_a_obj_swpush.cpp
    src/d/actor/d_a_obj_timer.cpp
    src/d/actor/d_a_path_line.cpp
    src/d/actor/d_a_scene_exit.cpp
    src/d/actor/d_a_set_bgobj.cpp
    src/d/actor/d_a_swhit0.cpp
    src/d/actor/d_a_tag_allmato.cpp
    src/d/actor/d_a_tag_camera.cpp
    src/d/actor/d_a_tag_chkpoint.cpp
    src/d/actor/d_a_tag_event.cpp
    src/d/actor/d_a_tag_evt.cpp
    src/d/actor/d_a_tag_evtarea.cpp
    src/d/actor/d_a_tag_evtmsg.cpp
    src/d/actor/d_a_tag_howl.cpp
    src/d/actor/d_a_tag_kmsg.cpp
    src/d/actor/d_a_tag_lantern.cpp
    src/d/actor/d_a_tag_mist.cpp
    src/d/actor/d_a_tag_msg.cpp
    src/d/actor/d_a_tag_push.cpp
    src/d/actor/d_a_tag_telop.cpp
    src/d/actor/d_a_tbox.cpp
    src/d/actor/d_a_tbox2.cpp
    src/d/actor/d_a_vrbox.cpp
    src/d/actor/d_a_vrbox2.cpp
    src/d/actor/d_a_arrow.cpp
    src/d/actor/d_a_boomerang.cpp
    src/d/actor/d_a_crod.cpp
    src/d/actor/d_a_demo00.cpp
    src/d/actor/d_a_disappear.cpp
    src/d/actor/d_a_mg_rod.cpp
    src/d/actor/d_a_midna.cpp
    src/d/actor/d_a_nbomb.cpp
    src/d/actor/d_a_obj_life_container.cpp
    src/d/actor/d_a_obj_yousei.cpp
    src/d/actor/d_a_spinner.cpp
    src/d/actor/d_a_suspend.cpp
    src/d/actor/d_a_tag_attention.cpp
    src/d/actor/d_a_alldie.cpp
    src/d/actor/d_a_andsw2.cpp
    src/d/actor/d_a_bd.cpp
    src/d/actor/d_a_canoe.cpp
    src/d/actor/d_a_cstaF.cpp
    src/d/actor/d_a_demo_item.cpp
    src/d/actor/d_a_door_bossL1.cpp
    src/d/actor/d_a_e_dn.cpp
    src/d/actor/d_a_e_fm.cpp
    src/d/actor/d_a_e_ga.cpp
    src/d/actor/d_a_e_hb.cpp
    src/d/actor/d_a_e_nest.cpp
    src/d/actor/d_a_e_rd.cpp
    src/d/actor/d_a_econt.cpp
    src/d/actor/d_a_fr.cpp
    src/d/actor/d_a_grass.cpp
    src/d/actor/d_a_kytag05.cpp
    src/d/actor/d_a_kytag10.cpp
    src/d/actor/d_a_kytag11.cpp
    src/d/actor/d_a_kytag14.cpp
    src/d/actor/d_a_mg_fish.cpp
    src/d/actor/d_a_npc_besu.cpp
    src/d/actor/d_a_npc_fairy_seirei.cpp
    src/d/actor/d_a_npc_fish.cpp
    src/d/actor/d_a_npc_henna.cpp
    src/d/actor/d_a_npc_kakashi.cpp
    src/d/actor/d_a_npc_kkri.cpp
    src/d/actor/d_a_npc_kolin.cpp
    src/d/actor/d_a_npc_maro.cpp
    src/d/actor/d_a_npc_taro.cpp
    src/d/actor/d_a_npc_tkj.cpp
    src/d/actor/d_a_obj_bhashi.cpp
    src/d/actor/d_a_obj_bkdoor.cpp
    src/d/actor/d_a_obj_bosswarp.cpp
    src/d/actor/d_a_obj_cboard.cpp
    src/d/actor/d_a_obj_digplace.cpp
    src/d/actor/d_a_obj_eff.cpp
    src/d/actor/d_a_obj_fmobj.cpp
    src/d/actor/d_a_obj_gpTaru.cpp
    src/d/actor/d_a_obj_hhashi.cpp
    src/d/actor/d_a_obj_kanban2.cpp
    src/d/actor/d_a_obj_kbacket.cpp
    src/d/actor/d_a_obj_kgate.cpp
    src/d/actor/d_a_obj_klift00.cpp
    src/d/actor/d_a_obj_ktOnFire.cpp
    src/d/actor/d_a_obj_ladder.cpp
    src/d/actor/d_a_obj_lv2Candle.cpp
    src/d/actor/d_a_obj_magne_arm.cpp
    src/d/actor/d_a_obj_metalbox.cpp
    src/d/actor/d_a_obj_mgate.cpp
    src/d/actor/d_a_obj_nameplate.cpp
    src/d/actor/d_a_obj_ornament_cloth.cpp
    src/d/actor/d_a_obj_rope_bridge.cpp
    src/d/actor/d_a_obj_sWallShutter.cpp
    src/d/actor/d_a_obj_stick.cpp
    src/d/actor/d_a_obj_stoneMark.cpp
    src/d/actor/d_a_obj_swpropeller.cpp
    src/d/actor/d_a_obj_swpush5.cpp
    src/d/actor/d_a_obj_yobikusa.cpp
    src/d/actor/d_a_scene_exit2.cpp
    src/d/actor/d_a_shop_item.cpp
    src/d/actor/d_a_sq.cpp
    src/d/actor/d_a_swc00.cpp
    src/d/actor/d_a_tag_CstaSw.cpp
    src/d/actor/d_a_tag_ajnot.cpp
    src/d/actor/d_a_tag_attack_item.cpp
    src/d/actor/d_a_tag_gstart.cpp
    src/d/actor/d_a_tag_hinit.cpp
    src/d/actor/d_a_tag_hjump.cpp
    src/d/actor/d_a_tag_hstop.cpp
    src/d/actor/d_a_tag_lv2prchk.cpp
    src/d/actor/d_a_tag_magne.cpp
    src/d/actor/d_a_tag_mhint.cpp
    src/d/actor/d_a_tag_mstop.cpp
    src/d/actor/d_a_tag_spring.cpp
    src/d/actor/d_a_tag_statue_evt.cpp
    src/d/actor/d_a_ykgr.cpp
    src/d/actor/d_a_L7demo_dr.cpp
    src/d/actor/d_a_L7low_dr.cpp
    src/d/actor/d_a_L7op_demo_dr.cpp
    src/d/actor/d_a_b_bh.cpp
    src/d/actor/d_a_b_bq.cpp
    src/d/actor/d_a_b_dr.cpp
    src/d/actor/d_a_b_dre.cpp
    src/d/actor/d_a_b_ds.cpp
    src/d/actor/d_a_b_gg.cpp
    src/d/actor/d_a_b_gm.cpp
    src/d/actor/d_a_b_gnd.cpp
    src/d/actor/d_a_b_go.cpp
    src/d/actor/d_a_b_gos.cpp
    src/d/actor/d_a_b_mgn.cpp
    src/d/actor/d_a_b_ob.cpp
    src/d/actor/d_a_b_oh.cpp
    src/d/actor/d_a_b_oh2.cpp
    src/d/actor/d_a_b_tn.cpp
    src/d/actor/d_a_b_yo.cpp
    src/d/actor/d_a_b_yo_ice.cpp
    src/d/actor/d_a_b_zant.cpp
    src/d/actor/d_a_b_zant_magic.cpp
    src/d/actor/d_a_b_zant_mobile.cpp
    src/d/actor/d_a_b_zant_sima.cpp
    src/d/actor/d_a_balloon_2D.cpp
    src/d/actor/d_a_bullet.cpp
    src/d/actor/d_a_coach_2D.cpp
    src/d/actor/d_a_coach_fire.cpp
    src/d/actor/d_a_cow.cpp
    src/d/actor/d_a_cstatue.cpp
    src/d/actor/d_a_do.cpp
    src/d/actor/d_a_door_boss.cpp
    src/d/actor/d_a_door_bossL5.cpp
    src/d/actor/d_a_door_mbossL1.cpp
    src/d/actor/d_a_door_push.cpp
    src/d/actor/d_a_e_ai.cpp
    src/d/actor/d_a_e_arrow.cpp
    src/d/actor/d_a_e_ba.cpp
    src/d/actor/d_a_e_bee.cpp
    src/d/actor/d_a_e_bg.cpp
    src/d/actor/d_a_e_bi.cpp
    src/d/actor/d_a_e_bi_leaf.cpp
    src/d/actor/d_a_e_bs.cpp
    src/d/actor/d_a_e_bu.cpp
    src/d/actor/d_a_e_bug.cpp
    src/d/actor/d_a_e_cr.cpp
    src/d/actor/d_a_e_cr_egg.cpp
    src/d/actor/d_a_e_db.cpp
    src/d/actor/d_a_e_db_leaf.cpp
    src/d/actor/d_a_e_dd.cpp
    src/d/actor/d_a_e_df.cpp
    src/d/actor/d_a_e_dk.cpp
    src/d/actor/d_a_e_dt.cpp
    src/d/actor/d_a_e_fb.cpp
    src/d/actor/d_a_e_fk.cpp
    src/d/actor/d_a_e_fs.cpp
    src/d/actor/d_a_e_fz.cpp
    src/d/actor/d_a_e_gb.cpp
    src/d/actor/d_a_e_ge.cpp
    src/d/actor/d_a_e_gi.cpp
    src/d/actor/d_a_e_gm.cpp
    src/d/actor/d_a_e_gob.cpp
    src/d/actor/d_a_e_gs.cpp
    src/d/actor/d_a_e_hb_leaf.cpp
    src/d/actor/d_a_e_hm.cpp
    src/d/actor/d_a_e_hp.cpp
    src/d/actor/d_a_e_hz.cpp
    src/d/actor/d_a_e_hzelda.cpp
    src/d/actor/d_a_e_is.cpp
    src/d/actor/d_a_e_kg.cpp
    src/d/actor/d_a_e_kk.cpp
    src/d/actor/d_a_e_kr.cpp
    src/d/actor/d_a_e_mb.cpp
    src/d/actor/d_a_e_md.cpp
    src/d/actor/d_a_e_mf.cpp
    src/d/actor/d_a_e_mk.cpp
    src/d/actor/d_a_e_mk_bo.cpp
    src/d/actor/d_a_e_mm.cpp
    src/d/actor/d_a_e_mm_mt.cpp
    src/d/actor/d_a_e_ms.cpp
    src/d/actor/d_a_e_nz.cpp
    src/d/actor/d_a_e_oc.cpp
    src/d/actor/d_a_e_oct_bg.cpp
    src/d/actor/d_a_e_ot.cpp
    src/d/actor/d_a_e_ph.cpp
    src/d/actor/d_a_e_pm.cpp
    src/d/actor/d_a_e_po.cpp
    src/d/actor/d_a_e_pz.cpp
    src/d/actor/d_a_e_rb.cpp
    src/d/actor/d_a_e_rdb.cpp
    src/d/actor/d_a_e_rdy.cpp
    src/d/actor/d_a_e_s1.cpp
    src/d/actor/d_a_e_sb.cpp
    src/d/actor/d_a_e_sf.cpp
    src/d/actor/d_a_e_sg.cpp
    src/d/actor/d_a_e_sh.cpp
    src/d/actor/d_a_e_sm.cpp
    src/d/actor/d_a_e_sm2.cpp
    src/d/actor/d_a_e_st.cpp
    src/d/actor/d_a_e_st_line.cpp
    src/d/actor/d_a_e_sw.cpp
    src/d/actor/d_a_e_th.cpp
    src/d/actor/d_a_e_th_ball.cpp
    src/d/actor/d_a_e_tk.cpp
    src/d/actor/d_a_e_tk2.cpp
    src/d/actor/d_a_e_tk_ball.cpp
    src/d/actor/d_a_e_tt.cpp
    src/d/actor/d_a_e_vt.cpp
    src/d/actor/d_a_e_warpappear.cpp
    src/d/actor/d_a_e_wb.cpp
    src/d/actor/d_a_e_ws.cpp
    src/d/actor/d_a_e_ww.cpp
    src/d/actor/d_a_e_yc.cpp
    src/d/actor/d_a_e_yd.cpp
    src/d/actor/d_a_e_yd_leaf.cpp
    src/d/actor/d_a_e_yg.cpp
    src/d/actor/d_a_e_yh.cpp
    src/d/actor/d_a_e_yk.cpp
    src/d/actor/d_a_e_ym.cpp
    src/d/actor/d_a_e_ym_tag.cpp
    src/d/actor/d_a_e_ymb.cpp
    src/d/actor/d_a_e_yr.cpp
    src/d/actor/d_a_e_zh.cpp
    src/d/actor/d_a_e_zm.cpp
    src/d/actor/d_a_e_zs.cpp
    src/d/actor/d_a_formation_mng.cpp
    src/d/actor/d_a_guard_mng.cpp
    src/d/actor/d_a_horse.cpp
    src/d/actor/d_a_hozelda.cpp
    src/d/actor/d_a_izumi_gate.cpp
    src/d/actor/d_a_kago.cpp
    src/d/actor/d_a_kytag01.cpp
    src/d/actor/d_a_kytag02.cpp
    src/d/actor/d_a_kytag03.cpp
    src/d/actor/d_a_kytag06.cpp
    src/d/actor/d_a_kytag07.cpp
    src/d/actor/d_a_kytag08.cpp
    src/d/actor/d_a_kytag09.cpp
    src/d/actor/d_a_kytag12.cpp
    src/d/actor/d_a_kytag13.cpp
    src/d/actor/d_a_kytag15.cpp
    src/d/actor/d_a_kytag16.cpp
    src/d/actor/d_a_mant.cpp
    src/d/actor/d_a_mg_fshop.cpp
    src/d/actor/d_a_mirror.cpp
    src/d/actor/d_a_movie_player.cpp
    src/d/actor/d_a_myna.cpp
    src/d/actor/d_a_ni.cpp
    src/d/actor/d_a_npc_aru.cpp
    src/d/actor/d_a_npc_ash.cpp
    src/d/actor/d_a_npc_ashB.cpp
    src/d/actor/d_a_npc_bans.cpp
    src/d/actor/d_a_npc_blue_ns.cpp
    src/d/actor/d_a_npc_bou.cpp
    src/d/actor/d_a_npc_bouS.cpp
    src/d/actor/d_a_npc_cdn3.cpp
    src/d/actor/d_a_npc_chat.cpp
    src/d/actor/d_a_npc_chin.cpp
    src/d/actor/d_a_npc_clerka.cpp
    src/d/actor/d_a_npc_clerkb.cpp
    src/d/actor/d_a_npc_clerkt.cpp
    src/d/actor/d_a_npc_coach.cpp
    src/d/actor/d_a_npc_df.cpp
    src/d/actor/d_a_npc_doc.cpp
    src/d/actor/d_a_npc_doorboy.cpp
    src/d/actor/d_a_npc_drainSol.cpp
    src/d/actor/d_a_npc_du.cpp
    src/d/actor/d_a_npc_fairy.cpp
    src/d/actor/d_a_npc_fguard.cpp
    src/d/actor/d_a_npc_gnd.cpp
    src/d/actor/d_a_npc_gra.cpp
    src/d/actor/d_a_npc_grc.cpp
    src/d/actor/d_a_npc_grd.cpp
    src/d/actor/d_a_npc_grm.cpp
    src/d/actor/d_a_npc_grmc.cpp
    src/d/actor/d_a_npc_gro.cpp
    src/d/actor/d_a_npc_grr.cpp
    src/d/actor/d_a_npc_grs.cpp
    src/d/actor/d_a_npc_grz.cpp
    src/d/actor/d_a_npc_guard.cpp
    src/d/actor/d_a_npc_gwolf.cpp
    src/d/actor/d_a_npc_hanjo.cpp
    src/d/actor/d_a_npc_henna0.cpp
    src/d/actor/d_a_npc_hoz.cpp
    src/d/actor/d_a_npc_impal.cpp
    src/d/actor/d_a_npc_inko.cpp
    src/d/actor/d_a_npc_ins.cpp
    src/d/actor/d_a_npc_jagar.cpp
    src/d/actor/d_a_npc_kasi_hana.cpp
    src/d/actor/d_a_npc_kasi_kyu.cpp
    src/d/actor/d_a_npc_kasi_mich.cpp
    src/d/actor/d_a_npc_kdk.cpp
    src/d/actor/d_a_npc_kn.cpp
    src/d/actor/d_a_npc_knj.cpp
    src/d/actor/d_a_npc_kolinb.cpp
    src/d/actor/d_a_npc_ks.cpp
    src/d/actor/d_a_npc_kyury.cpp
    src/d/actor/d_a_npc_len.cpp
    src/d/actor/d_a_npc_lf.cpp
    src/d/actor/d_a_npc_lud.cpp
    src/d/actor/d_a_npc_midp.cpp
    src/d/actor/d_a_npc_mk.cpp
    src/d/actor/d_a_npc_moi.cpp
    src/d/actor/d_a_npc_moir.cpp
    src/d/actor/d_a_npc_myna2.cpp
    src/d/actor/d_a_npc_ne.cpp
    src/d/actor/d_a_npc_p2.cpp
    src/d/actor/d_a_npc_pachi_besu.cpp
    src/d/actor/d_a_npc_pachi_maro.cpp
    src/d/actor/d_a_npc_pachi_taro.cpp
    src/d/actor/d_a_npc_passer.cpp
    src/d/actor/d_a_npc_passer2.cpp
    src/d/actor/d_a_npc_post.cpp
    src/d/actor/d_a_npc_pouya.cpp
    src/d/actor/d_a_npc_prayer.cpp
    src/d/actor/d_a_npc_raca.cpp
    src/d/actor/d_a_npc_rafrel.cpp
    src/d/actor/d_a_npc_saru.cpp
    src/d/actor/d_a_npc_seib.cpp
    src/d/actor/d_a_npc_seic.cpp
    src/d/actor/d_a_npc_seid.cpp
    src/d/actor/d_a_npc_seira.cpp
    src/d/actor/d_a_npc_seira2.cpp
    src/d/actor/d_a_npc_seirei.cpp
    src/d/actor/d_a_npc_shad.cpp
    src/d/actor/d_a_npc_shaman.cpp
    src/d/actor/d_a_npc_shoe.cpp
    src/d/actor/d_a_npc_shop0.cpp
    src/d/actor/d_a_npc_shop_maro.cpp
    src/d/actor/d_a_npc_sola.cpp
    src/d/actor/d_a_npc_soldierA.cpp
    src/d/actor/d_a_npc_soldierB.cpp
    src/d/actor/d_a_npc_sq.cpp
    src/d/actor/d_a_npc_the.cpp
    src/d/actor/d_a_npc_theB.cpp
    src/d/actor/d_a_npc_tk.cpp
    src/d/actor/d_a_npc_tkc.cpp
    src/d/actor/d_a_npc_tkj2.cpp
    src/d/actor/d_a_npc_tks.cpp
    src/d/actor/d_a_npc_toby.cpp
    src/d/actor/d_a_npc_tr.cpp
    src/d/actor/d_a_npc_uri.cpp
    src/d/actor/d_a_npc_worm.cpp
    src/d/actor/d_a_npc_wrestler.cpp
    src/d/actor/d_a_npc_yamid.cpp
    src/d/actor/d_a_npc_yamis.cpp
    src/d/actor/d_a_npc_yamit.cpp
    src/d/actor/d_a_npc_yelia.cpp
    src/d/actor/d_a_npc_ykm.cpp
    src/d/actor/d_a_npc_ykw.cpp
    src/d/actor/d_a_npc_zanb.cpp
    src/d/actor/d_a_npc_zant.cpp
    src/d/actor/d_a_npc_zelR.cpp
    src/d/actor/d_a_npc_zelRo.cpp
    src/d/actor/d_a_npc_zelda.cpp
    src/d/actor/d_a_npc_zra.cpp
    src/d/actor/d_a_npc_zrc.cpp
    src/d/actor/d_a_npc_zrz.cpp
    src/d/actor/d_a_obj_Lv5Key.cpp
    src/d/actor/d_a_obj_Turara.cpp
    src/d/actor/d_a_obj_TvCdlst.cpp
    src/d/actor/d_a_obj_Y_taihou.cpp
    src/d/actor/d_a_obj_amiShutter.cpp
    src/d/actor/d_a_obj_ari.cpp
    src/d/actor/d_a_obj_automata.cpp
    src/d/actor/d_a_obj_avalanche.cpp
    src/d/actor/d_a_obj_balloon.cpp
    src/d/actor/d_a_obj_barDesk.cpp
    src/d/actor/d_a_obj_batta.cpp
    src/d/actor/d_a_obj_bbox.cpp
    src/d/actor/d_a_obj_bed.cpp
    src/d/actor/d_a_obj_bemos.cpp
    src/d/actor/d_a_obj_bhbridge.cpp
    src/d/actor/d_a_obj_bk_leaf.cpp
    src/d/actor/d_a_obj_bky_rock.cpp
    src/d/actor/d_a_obj_bmWindow.cpp
    src/d/actor/d_a_obj_bmshutter.cpp
    src/d/actor/d_a_obj_bombf.cpp
    src/d/actor/d_a_obj_boumato.cpp
    src/d/actor/d_a_obj_brg.cpp
    src/d/actor/d_a_obj_bsGate.cpp
    src/d/actor/d_a_obj_bubblePilar.cpp
    src/d/actor/d_a_obj_catdoor.cpp
    src/d/actor/d_a_obj_cb.cpp
    src/d/actor/d_a_obj_cblock.cpp
    src/d/actor/d_a_obj_cdoor.cpp
    src/d/actor/d_a_obj_chandelier.cpp
    src/d/actor/d_a_obj_chest.cpp
    src/d/actor/d_a_obj_cho.cpp
    src/d/actor/d_a_obj_cowdoor.cpp
    src/d/actor/d_a_obj_crope.cpp
    src/d/actor/d_a_obj_crvfence.cpp
    src/d/actor/d_a_obj_crvgate.cpp
    src/d/actor/d_a_obj_crvhahen.cpp
    src/d/actor/d_a_obj_crvlh_down.cpp
    src/d/actor/d_a_obj_crvlh_up.cpp
    src/d/actor/d_a_obj_crvsteel.cpp
    src/d/actor/d_a_obj_crystal.cpp
    src/d/actor/d_a_obj_cwall.cpp
    src/d/actor/d_a_obj_damCps.cpp
    src/d/actor/d_a_obj_dan.cpp
    src/d/actor/d_a_obj_digholl.cpp
    src/d/actor/d_a_obj_digsnow.cpp
    src/d/actor/d_a_obj_dmelevator.cpp
    src/d/actor/d_a_obj_drop.cpp
    src/d/actor/d_a_obj_dust.cpp
    src/d/actor/d_a_obj_enemy_create.cpp
    src/d/actor/d_a_obj_fallobj.cpp
    src/d/actor/d_a_obj_fan.cpp
    src/d/actor/d_a_obj_fchain.cpp
    src/d/actor/d_a_obj_fireWood.cpp
    src/d/actor/d_a_obj_fireWood2.cpp
    src/d/actor/d_a_obj_firepillar.cpp
    src/d/actor/d_a_obj_firepillar2.cpp
    src/d/actor/d_a_obj_flag.cpp
    src/d/actor/d_a_obj_flag2.cpp
    src/d/actor/d_a_obj_flag3.cpp
    src/d/actor/d_a_obj_food.cpp
    src/d/actor/d_a_obj_fw.cpp
    src/d/actor/d_a_obj_gadget.cpp
    src/d/actor/d_a_obj_ganonwall.cpp
    src/d/actor/d_a_obj_ganonwall2.cpp
    src/d/actor/d_a_obj_gb.cpp
    src/d/actor/d_a_obj_geyser.cpp
    src/d/actor/d_a_obj_glowSphere.cpp
    src/d/actor/d_a_obj_gm.cpp
    src/d/actor/d_a_obj_goGate.cpp
    src/d/actor/d_a_obj_gomikabe.cpp
    src/d/actor/d_a_obj_gra2.cpp
    src/d/actor/d_a_obj_graWall.cpp
    src/d/actor/d_a_obj_gra_rock.cpp
    src/d/actor/d_a_obj_grave_stone.cpp
    src/d/actor/d_a_obj_groundwater.cpp
    src/d/actor/d_a_obj_grz_rock.cpp
    src/d/actor/d_a_obj_h_saku.cpp
    src/d/actor/d_a_obj_hakai_brl.cpp
    src/d/actor/d_a_obj_hakai_ftr.cpp
    src/d/actor/d_a_obj_hasu2.cpp
    src/d/actor/d_a_obj_hata.cpp
    src/d/actor/d_a_obj_hb.cpp
    src/d/actor/d_a_obj_hbombkoya.cpp
    src/d/actor/d_a_obj_heavySw.cpp
    src/d/actor/d_a_obj_hfuta.cpp
    src/d/actor/d_a_obj_hsTarget.cpp
    src/d/actor/d_a_obj_ice_l.cpp
    src/d/actor/d_a_obj_ice_s.cpp
    src/d/actor/d_a_obj_iceblock.cpp
    src/d/actor/d_a_obj_iceleaf.cpp
    src/d/actor/d_a_obj_ihasi.cpp
    src/d/actor/d_a_obj_ikada.cpp
    src/d/actor/d_a_obj_inobone.cpp
    src/d/actor/d_a_obj_ita.cpp
    src/d/actor/d_a_obj_itamato.cpp
    src/d/actor/d_a_obj_kabuto.cpp
    src/d/actor/d_a_obj_kag.cpp
    src/d/actor/d_a_obj_kage.cpp
    src/d/actor/d_a_obj_kago.cpp
    src/d/actor/d_a_obj_kaisou.cpp
    src/d/actor/d_a_obj_kamakiri.cpp
    src/d/actor/d_a_obj_kantera.cpp
    src/d/actor/d_a_obj_katatsumuri.cpp
    src/d/actor/d_a_obj_kazeneko.cpp
    src/d/actor/d_a_obj_kbox.cpp
    src/d/actor/d_a_obj_key.cpp
    src/d/actor/d_a_obj_keyhole.cpp
    src/d/actor/d_a_obj_ki.cpp
    src/d/actor/d_a_obj_kiPot.cpp
    src/d/actor/d_a_obj_kita.cpp
    src/d/actor/d_a_obj_kjgjs.cpp
    src/d/actor/d_a_obj_kkanban.cpp
    src/d/actor/d_a_obj_knBullet.cpp
    src/d/actor/d_a_obj_kshutter.cpp
    src/d/actor/d_a_obj_kuwagata.cpp
    src/d/actor/d_a_obj_kwheel00.cpp
    src/d/actor/d_a_obj_kwheel01.cpp
    src/d/actor/d_a_obj_kznkarm.cpp
    src/d/actor/d_a_obj_laundry.cpp
    src/d/actor/d_a_obj_laundry_rope.cpp
    src/d/actor/d_a_obj_lbox.cpp
    src/d/actor/d_a_obj_lp.cpp
    src/d/actor/d_a_obj_lv1Candle00.cpp
    src/d/actor/d_a_obj_lv1Candle01.cpp
    src/d/actor/d_a_obj_lv3Candle.cpp
    src/d/actor/d_a_obj_lv3Water.cpp
    src/d/actor/d_a_obj_lv3Water2.cpp
    src/d/actor/d_a_obj_lv3WaterB.cpp
    src/d/actor/d_a_obj_lv3saka00.cpp
    src/d/actor/d_a_obj_lv3waterEff.cpp
    src/d/actor/d_a_obj_lv4CandleDemoTag.cpp
    src/d/actor/d_a_obj_lv4CandleTag.cpp
    src/d/actor/d_a_obj_lv4EdShutter.cpp
    src/d/actor/d_a_obj_lv4Gate.cpp
    src/d/actor/d_a_obj_lv4HsTarget.cpp
    src/d/actor/d_a_obj_lv4PoGate.cpp
    src/d/actor/d_a_obj_lv4RailWall.cpp
    src/d/actor/d_a_obj_lv4SlideWall.cpp
    src/d/actor/d_a_obj_lv4bridge.cpp
    src/d/actor/d_a_obj_lv4chandelier.cpp
    src/d/actor/d_a_obj_lv4digsand.cpp
    src/d/actor/d_a_obj_lv4floor.cpp
    src/d/actor/d_a_obj_lv4gear.cpp
    src/d/actor/d_a_obj_lv4prelvtr.cpp
    src/d/actor/d_a_obj_lv4prwall.cpp
    src/d/actor/d_a_obj_lv4sand.cpp
    src/d/actor/d_a_obj_lv5FloorBoard.cpp
    src/d/actor/d_a_obj_lv5IceWall.cpp
    src/d/actor/d_a_obj_lv5SwIce.cpp
    src/d/actor/d_a_obj_lv5ychndlr.cpp
    src/d/actor/d_a_obj_lv5yiblltray.cpp
    src/d/actor/d_a_obj_lv6ChangeGate.cpp
    src/d/actor/d_a_obj_lv6FurikoTrap.cpp
    src/d/actor/d_a_obj_lv6Lblock.cpp
    src/d/actor/d_a_obj_lv6SwGate.cpp
    src/d/actor/d_a_obj_lv6SzGate.cpp
    src/d/actor/d_a_obj_lv6Tenbin.cpp
    src/d/actor/d_a_obj_lv6TogeRoll.cpp
    src/d/actor/d_a_obj_lv6TogeTrap.cpp
    src/d/actor/d_a_obj_lv6bemos.cpp
    src/d/actor/d_a_obj_lv6bemos2.cpp
    src/d/actor/d_a_obj_lv6egate.cpp
    src/d/actor/d_a_obj_lv6elevta.cpp
    src/d/actor/d_a_obj_lv6swturn.cpp
    src/d/actor/d_a_obj_lv7BsGate.cpp
    src/d/actor/d_a_obj_lv7PropellerY.cpp
    src/d/actor/d_a_obj_lv7bridge.cpp
    src/d/actor/d_a_obj_lv8KekkaiTrap.cpp
    src/d/actor/d_a_obj_lv8Lift.cpp
    src/d/actor/d_a_obj_lv8OptiLift.cpp
    src/d/actor/d_a_obj_lv8UdFloor.cpp
    src/d/actor/d_a_obj_lv9SwShutter.cpp
    src/d/actor/d_a_obj_magLift.cpp
    src/d/actor/d_a_obj_magLiftRot.cpp
    src/d/actor/d_a_obj_maki.cpp
    src/d/actor/d_a_obj_master_sword.cpp
    src/d/actor/d_a_obj_mato.cpp
    src/d/actor/d_a_obj_mhole.cpp
    src/d/actor/d_a_obj_mie.cpp
    src/d/actor/d_a_obj_mirror_6pole.cpp
    src/d/actor/d_a_obj_mirror_chain.cpp
    src/d/actor/d_a_obj_mirror_sand.cpp
    src/d/actor/d_a_obj_mirror_screw.cpp
    src/d/actor/d_a_obj_mirror_table.cpp
    src/d/actor/d_a_obj_msima.cpp
    src/d/actor/d_a_obj_mvstair.cpp
    src/d/actor/d_a_obj_myogan.cpp
    src/d/actor/d_a_obj_nagaisu.cpp
    src/d/actor/d_a_obj_nan.cpp
    src/d/actor/d_a_obj_ndoor.cpp
    src/d/actor/d_a_obj_nougu.cpp
    src/d/actor/d_a_obj_octhashi.cpp
    src/d/actor/d_a_obj_oiltubo.cpp
    src/d/actor/d_a_obj_onsen.cpp
    src/d/actor/d_a_obj_onsenFire.cpp
    src/d/actor/d_a_obj_onsenTaru.cpp
    src/d/actor/d_a_obj_pdoor.cpp
    src/d/actor/d_a_obj_pdtile.cpp
    src/d/actor/d_a_obj_pdwall.cpp
    src/d/actor/d_a_obj_picture.cpp
    src/d/actor/d_a_obj_pillar.cpp
    src/d/actor/d_a_obj_pleaf.cpp
    src/d/actor/d_a_obj_poCandle.cpp
    src/d/actor/d_a_obj_poFire.cpp
    src/d/actor/d_a_obj_poTbox.cpp
    src/d/actor/d_a_obj_prop.cpp
    src/d/actor/d_a_obj_pumpkin.cpp
    src/d/actor/d_a_obj_rcircle.cpp
    src/d/actor/d_a_obj_rfHole.cpp
    src/d/actor/d_a_obj_rgate.cpp
    src/d/actor/d_a_obj_riverrock.cpp
    src/d/actor/d_a_obj_rock.cpp
    src/d/actor/d_a_obj_rotBridge.cpp
    src/d/actor/d_a_obj_rotTrap.cpp
    src/d/actor/d_a_obj_roten.cpp
    src/d/actor/d_a_obj_rstair.cpp
    src/d/actor/d_a_obj_rw.cpp
    src/d/actor/d_a_obj_saidan.cpp
    src/d/actor/d_a_obj_sakuita.cpp
    src/d/actor/d_a_obj_sakuita_rope.cpp
    src/d/actor/d_a_obj_scannon.cpp
    src/d/actor/d_a_obj_scannon_crs.cpp
    src/d/actor/d_a_obj_scannon_ten.cpp
    src/d/actor/d_a_obj_sekidoor.cpp
    src/d/actor/d_a_obj_sekizo.cpp
    src/d/actor/d_a_obj_sekizoa.cpp
    src/d/actor/d_a_obj_shield.cpp
    src/d/actor/d_a_obj_sm_door.cpp
    src/d/actor/d_a_obj_smallkey.cpp
    src/d/actor/d_a_obj_smgdoor.cpp
    src/d/actor/d_a_obj_smoke.cpp
    src/d/actor/d_a_obj_smtile.cpp
    src/d/actor/d_a_obj_smw_stone.cpp
    src/d/actor/d_a_obj_snowEffTag.cpp
    src/d/actor/d_a_obj_snow_soup.cpp
    src/d/actor/d_a_obj_so.cpp
    src/d/actor/d_a_obj_spinLift.cpp
    src/d/actor/d_a_obj_ss_drink.cpp
    src/d/actor/d_a_obj_ss_item.cpp
    src/d/actor/d_a_obj_stairBlock.cpp
    src/d/actor/d_a_obj_stone.cpp
    src/d/actor/d_a_obj_stopper.cpp
    src/d/actor/d_a_obj_stopper2.cpp
    src/d/actor/d_a_obj_suisya.cpp
    src/d/actor/d_a_obj_sw.cpp
    src/d/actor/d_a_obj_swBallA.cpp
    src/d/actor/d_a_obj_swBallB.cpp
    src/d/actor/d_a_obj_swBallC.cpp
    src/d/actor/d_a_obj_swLight.cpp
    src/d/actor/d_a_obj_swchain.cpp
    src/d/actor/d_a_obj_swhang.cpp
    src/d/actor/d_a_obj_sword.cpp
    src/d/actor/d_a_obj_swpush2.cpp
    src/d/actor/d_a_obj_swspinner.cpp
    src/d/actor/d_a_obj_swturn.cpp
    src/d/actor/d_a_obj_syRock.cpp
    src/d/actor/d_a_obj_szbridge.cpp
    src/d/actor/d_a_obj_taFence.cpp
    src/d/actor/d_a_obj_table.cpp
    src/d/actor/d_a_obj_takaraDai.cpp
    src/d/actor/d_a_obj_tatigi.cpp
    src/d/actor/d_a_obj_ten.cpp
    src/d/actor/d_a_obj_testcube.cpp
    src/d/actor/d_a_obj_tgake.cpp
    src/d/actor/d_a_obj_thashi.cpp
    src/d/actor/d_a_obj_thdoor.cpp
    src/d/actor/d_a_obj_timeFire.cpp
    src/d/actor/d_a_obj_tks.cpp
    src/d/actor/d_a_obj_tmoon.cpp
    src/d/actor/d_a_obj_toaru_maki.cpp
    src/d/actor/d_a_obj_toby.cpp
    src/d/actor/d_a_obj_tobyhouse.cpp
    src/d/actor/d_a_obj_togeTrap.cpp
    src/d/actor/d_a_obj_tombo.cpp
    src/d/actor/d_a_obj_tornado.cpp
    src/d/actor/d_a_obj_tornado2.cpp
    src/d/actor/d_a_obj_tp.cpp
    src/d/actor/d_a_obj_treesh.cpp
    src/d/actor/d_a_obj_twGate.cpp
    src/d/actor/d_a_obj_udoor.cpp
    src/d/actor/d_a_obj_usaku.cpp
    src/d/actor/d_a_obj_vground.cpp
    src/d/actor/d_a_obj_volcball.cpp
    src/d/actor/d_a_obj_volcbom.cpp
    src/d/actor/d_a_obj_warp_kbrg.cpp
    src/d/actor/d_a_obj_warp_obrg.cpp
    src/d/actor/d_a_obj_waterGate.cpp
    src/d/actor/d_a_obj_waterPillar.cpp
    src/d/actor/d_a_obj_waterfall.cpp
    src/d/actor/d_a_obj_wchain.cpp
    src/d/actor/d_a_obj_wdStick.cpp
    src/d/actor/d_a_obj_web0.cpp
    src/d/actor/d_a_obj_web1.cpp
    src/d/actor/d_a_obj_well_cover.cpp
    src/d/actor/d_a_obj_wflag.cpp
    src/d/actor/d_a_obj_wind_stone.cpp
    src/d/actor/d_a_obj_window.cpp
    src/d/actor/d_a_obj_wood_pendulum.cpp
    src/d/actor/d_a_obj_wood_statue.cpp
    src/d/actor/d_a_obj_wsword.cpp
    src/d/actor/d_a_obj_yel_bag.cpp
    src/d/actor/d_a_obj_ystone.cpp
    src/d/actor/d_a_obj_zcloth.cpp
    src/d/actor/d_a_obj_zdoor.cpp
    src/d/actor/d_a_obj_zrTurara.cpp
    src/d/actor/d_a_obj_zrTuraraRock.cpp
    src/d/actor/d_a_obj_zraMark.cpp
    src/d/actor/d_a_obj_zra_freeze.cpp
    src/d/actor/d_a_obj_zra_rock.cpp
    src/d/actor/d_a_passer_mng.cpp
    src/d/actor/d_a_tag_arena.cpp
    src/d/actor/d_a_peru.cpp
    src/d/actor/d_a_ppolamp.cpp
    src/d/actor/d_a_skip_2D.cpp
    src/d/actor/d_a_startAndGoal.cpp
    src/d/actor/d_a_swBall.cpp
    src/d/actor/d_a_swLBall.cpp
    src/d/actor/d_a_swTime.cpp
    src/d/actor/d_a_tag_Lv6Gate.cpp
    src/d/actor/d_a_tag_Lv7Gate.cpp
    src/d/actor/d_a_tag_Lv8Gate.cpp
    src/d/actor/d_a_tag_TWgate.cpp
    src/d/actor/d_a_tag_lv6CstaSw.cpp
    src/d/actor/d_a_tag_assistance.cpp
    src/d/actor/d_a_tag_bottle_item.cpp
    src/d/actor/d_a_tag_chgrestart.cpp
    src/d/actor/d_a_tag_csw.cpp
    src/d/actor/d_a_tag_escape.cpp
    src/d/actor/d_a_tag_firewall.cpp
    src/d/actor/d_a_tag_gra.cpp
    src/d/actor/d_a_tag_guard.cpp
    src/d/actor/d_a_tag_instruction.cpp
    src/d/actor/d_a_tag_kago_fall.cpp
    src/d/actor/d_a_tag_lightball.cpp
    src/d/actor/d_a_tag_lv5soup.cpp
    src/d/actor/d_a_tag_mmsg.cpp
    src/d/actor/d_a_tag_mwait.cpp
    src/d/actor/d_a_tag_myna2.cpp
    src/d/actor/d_a_tag_myna_light.cpp
    src/d/actor/d_a_tag_pachi.cpp
    src/d/actor/d_a_tag_poFire.cpp
    src/d/actor/d_a_tag_qs.cpp
    src/d/actor/d_a_tag_ret_room.cpp
    src/d/actor/d_a_tag_river_back.cpp
    src/d/actor/d_a_tag_rmbit_sw.cpp
    src/d/actor/d_a_tag_schedule.cpp
    src/d/actor/d_a_tag_setBall.cpp
    src/d/actor/d_a_tag_setrestart.cpp
    src/d/actor/d_a_tag_shop_camera.cpp
    src/d/actor/d_a_tag_shop_item.cpp
    src/d/actor/d_a_tag_smk_emt.cpp
    src/d/actor/d_a_tag_spinner.cpp
    src/d/actor/d_a_tag_sppath.cpp
    src/d/actor/d_a_tag_ss_drink.cpp
    src/d/actor/d_a_tag_stream.cpp
    src/d/actor/d_a_tag_theB_hint.cpp
    src/d/actor/d_a_tag_wara_howl.cpp
    src/d/actor/d_a_tag_watchge.cpp
    src/d/actor/d_a_tag_waterfall.cpp
    src/d/actor/d_a_tag_wljump.cpp
    src/d/actor/d_a_tag_yami.cpp
    src/d/actor/d_a_talk.cpp
    src/d/actor/d_a_tboxSw.cpp
    src/d/actor/d_a_title.cpp
    src/d/actor/d_a_warp_bug.cpp
    )

set(DUSK_FILES
    src/dusk/imgui.cpp
    src/dusk/stubs.c
    )

source_group("dolzel" FILES ${DOLZEL_FILES} ${Z2AUDIOLIB_FILES} ${SSYSTEM_FILES} ${JSYSTEM_FILES} ${REL_FILES})
source_group("dusk" FILES ${DUSK_FILES})

add_library(game SHARED ${DOLZEL_FILES} ${Z2AUDIOLIB_FILES} ${SSYSTEM_FILES} ${JSYSTEM_FILES} ${REL_FILES} ${DUSK_FILES})
target_compile_definitions(game PRIVATE TARGET_PC VERSION=0)
# TODO: version handling for res includes
target_include_directories(game PRIVATE include assets/GZ2E01 src/PowerPC_EABI_Support/MSL/MSL_C++/MSL_Common/Include src/PowerPC_EABI_Support/MSL/MSL_C/MSL_Common/Include src/PowerPC_EABI_Support/MSL/MSL_C/MSL_Common_Embedded/Math/Include)
target_link_libraries(game PRIVATE aurora::core aurora::gx aurora::si aurora::vi aurora::pad)

add_executable(dusk src/dusk/main.cpp)
target_compile_definitions(dusk PRIVATE TARGET_PC VERSION=0)
target_include_directories(dusk PRIVATE include)
target_link_libraries(dusk PRIVATE game aurora::main)
